@@ -26,5 +26,5 @@ require File.dirname(__FILE__) + '/youtube_g/request/video_search'
 require File.dirname(__FILE__) + '/youtube_g/response/video_search'
 
 class YouTubeG #:nodoc:
-  VERSION = '0.4.8.7'
+  VERSION = '0.4.8.8'
 end
